--- a/src/components/month/Month.module.scss
+++ b/src/components/month/Month.module.scss
@@ -4,8 +4,15 @@
     color: red;
     font-size: 24px;
     font-weight: 600;
+    border: none;
+    background-color: rgba($color: #000000, $alpha: 0.0);
 
     &:hover {
         cursor: pointer;
     }
+}
+
+option {
+    border: none;
+    background-color: rgba($color: #000000, $alpha: 0.0);
 }
